Fix build warnings.